--- a/games/charm.html
+++ b/games/charm.html
@@ -8,11 +8,13 @@
 <body>
 
 <header>
+<input type="checkbox" id="togglebox" />
+  <label for="togglebox" id="navtoggler">Menu</label>
 <img src="../images/ebrius-indie-game-studo-logo.png" width="150" alt="Ebrius Indie Video Game Studio Logo">
 <h1>Ebrius</h1>
 <h2>Game Studio</h2>
 
-<nav>
+<nav id="offcanvas">
 <ul>
   <li><a href="../index.html">Home</a></li>
   <li>
@@ -20,40 +22,22 @@
   <div class="drop-menu">Games</div>
   <div class="dropdown-content">
     <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
+    <a href="altered.html">Altered</a>
+    <a href="dunlore.html">Dunlore</a>
+    <a href="divided.html">Divided</a>
+    <a href="charm.html">Charm</a>
+    <a href="chasm_climb.html">Chasm Climb</a>
   </div>
 </div>
   </li>
-  <li><a href="index.html">About</a></li>
-  <li><a href="index.html">Contact</a></li>
+  <li><a href="../about/index.html">About</a></li>
+  <li><a href="../contact/index.html">Contact</a></li>
 </ul>
-
-<div class="mobile-menu">
-  <div class="mobile-dropdown">
-  <div class="mobile-drop-menu">Menu</div>
-  <div class="mobile-dropdown-content">
-  <a href="../index.html">Home</a>
-  <div class="dropdown">
-  <div class="drop-menu">Games</div>
-  <div class="dropdown-content">
-    <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
-  </div>
-</div>
-  <a href="index.html">About</a>
-  <a href="index.html">Contact</a>
-</ul>
-</div>
 </nav>
 
 </header>
 
+<div id=main-content">
 <div class="main-game-info">
 <div class="video">
 <img src="../images/charm-video-placeholder.jpg" alt="Charm Video Placeholder">
@@ -74,13 +58,13 @@
 <div class="gallery">
 <h3>Gallery</h3>
 <div class="gallery-module">
-<img src="../images/guardian-gallery.jpg" alt="Image Gallery: Guardian">
+<img src="../images/charm-gallery-gameplay.jpg" alt="Image Gallery: Charm Gameplay">
 </div>
 <div class="gallery-module">
-<img src="../images/gallery-guardian-house.jpg" alt="Image Gallery: Guardian House">
+<img src="../images/charm-gallery-explosion.jpg" alt="Image Gallery: Charm Explosion">
 </div>
 <div class="gallery-module">
-<img src="../images/gallery-guardian-mountains.jpg" alt="Image Gallery: Guardian Mountains">
+<img src="../images/charm-gallery-fortress.jpg" alt="Image Gallery: Charm Fortress">
 </div>
 </div>
 <footer>
@@ -89,6 +73,7 @@
 <a href="https://www.youtube.com/user/DrunkenWaffle"><img src="../images/youtube.png" alt="Ebrius Youtube Page Link" width="80px"></a>
 </div>
 </footer>
+</div>
 </body>
 
 </html>
