--- a/games/chasm_climb.html
+++ b/games/chasm_climb.html
@@ -8,11 +8,13 @@
 <body>
 
 <header>
+<input type="checkbox" id="togglebox" />
+  <label for="togglebox" id="navtoggler">Menu</label>
 <img src="../images/ebrius-indie-game-studo-logo.png" width="150" alt="Ebrius Indie Video Game Studio Logo">
 <h1>Ebrius</h1>
 <h2>Game Studio</h2>
 
-<nav>
+<nav id="offcanvas">
 <ul>
   <li><a href="../index.html">Home</a></li>
   <li>
@@ -20,7 +22,7 @@
   <div class="drop-menu">Games</div>
   <div class="dropdown-content">
     <a href="guardian.html">Guardian</a>
-    <a href="divided.html">Altered</a>
+    <a href="altered.html">Altered</a>
     <a href="dunlore.html">Dunlore</a>
     <a href="divided.html">Divided</a>
     <a href="charm.html">Charm</a>
@@ -28,44 +30,26 @@
   </div>
 </div>
   </li>
-  <li><a href="index.html">About</a></li>
-  <li><a href="index.html">Contact</a></li>
+  <li><a href="../about/index.html">About</a></li>
+  <li><a href="../contact/index.html">Contact</a></li>
 </ul>
-
-<div class="mobile-menu">
-  <div class="mobile-dropdown">
-  <div class="mobile-drop-menu">Menu</div>
-  <div class="mobile-dropdown-content">
-  <a href="../index.html">Home</a>
-  <div class="dropdown">
-  <div class="drop-menu">Games</div>
-  <div class="dropdown-content">
-    <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
-  </div>
-</div>
-  <a href="index.html">About</a>
-  <a href="index.html">Contact</a>
-</ul>
-</div>
 </nav>
 
 </header>
 
+<div id=main-content">
 <div class="main-game-info">
 <div class="video">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/KFjkFDk7O4s" frameborder="0" allowfullscreen></iframe>
+<img src="../images/chasmclimb-video-placeholder.jpg" alt="Chasm Climb: Video Placeholder">
 </div>
 <div class="description">
-<p><strong>Guardian</strong></p>
+<p><strong>Chasm Climb</strong></p>
 <div class="info">
-<p>Genre: Side-scrolling Platformer, linear story</p>
-<p>Platform: Windows XP, Vista, 7 and 8</p>
+<p>Genre: Vertical Platformer, level-based progression</p>
+<p>Platform: iPhone</p>
+<p>Year: 2015</p>
 <div class="paragraph">
-<p>You play the role of a teddy bear tasked with the duty to protect your child owner. When a mysterious force kidnaps the other toy guardians, it is up to you to rescue them and find the culprit.</p>
+<p>Play as a ninja by using a grappling hook to swing between cliff sides! Players use the touch capabilities of the iPhone in a race to earn the highest score. Coming soon to the Apple App Store.</p>
 </div>
 </div>
 </div> 
@@ -73,22 +57,18 @@
 
 <div class="gallery">
 <h3>Gallery</h3>
-<div class="gallery-module">
-<img src="../images/guardian-gallery.jpg" alt="Image Gallery: Guardian">
-</div>
-<div class="gallery-module">
-<img src="../images/gallery-guardian-house.jpg" alt="Image Gallery: Guardian House">
-</div>
-<div class="gallery-module">
-<img src="../images/gallery-guardian-mountains.jpg" alt="Image Gallery: Guardian Mountains">
+<div class="gallery-module-center mobile-images">
+<img src="../images/chasmclimb-gameplay.jpg" alt="Image Gallery: Gameplay">
 </div>
 </div>
+
 <footer>
 <p>&copy; Ryan Fleury</p>
 <div class="social-media">
 <a href="https://www.youtube.com/user/DrunkenWaffle"><img src="../images/youtube.png" alt="Ebrius Youtube Page Link" width="80px"></a>
 </div>
 </footer>
+</div>
 </body>
 
 </html>
