--- a/games/dunlore.html
+++ b/games/dunlore.html
@@ -8,11 +8,13 @@
 <body>
 
 <header>
+<input type="checkbox" id="togglebox" />
+  <label for="togglebox" id="navtoggler">Menu</label>
 <img src="../images/ebrius-indie-game-studo-logo.png" width="150" alt="Ebrius Indie Video Game Studio Logo">
 <h1>Ebrius</h1>
 <h2>Game Studio</h2>
 
-<nav>
+<nav id="offcanvas">
 <ul>
   <li><a href="../index.html">Home</a></li>
   <li>
@@ -20,51 +22,32 @@
   <div class="drop-menu">Games</div>
   <div class="dropdown-content">
     <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
+    <a href="altered.html">Altered</a>
+    <a href="dunlore.html">Dunlore</a>
+    <a href="divided.html">Divided</a>
+    <a href="charm.html">Charm</a>
+    <a href="chasm_climb.html">Chasm Climb</a>
   </div>
 </div>
   </li>
-  <li><a href="index.html">About</a></li>
-  <li><a href="index.html">Contact</a></li>
+  <li><a href="../about/index.html">About</a></li>
+  <li><a href="../contact/index.html">Contact</a></li>
 </ul>
-
-<div class="mobile-menu">
-  <div class="mobile-dropdown">
-  <div class="mobile-drop-menu">Menu</div>
-  <div class="mobile-dropdown-content">
-  <a href="../index.html">Home</a>
-  <div class="dropdown">
-  <div class="drop-menu">Games</div>
-  <div class="dropdown-content">
-    <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
-  </div>
-</div>
-  <a href="index.html">About</a>
-  <a href="index.html">Contact</a>
-</ul>
-</div>
 </nav>
 
 </header>
-
+<div id=main-content">
 <div class="main-game-info">
 <div class="video">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/KFjkFDk7O4s" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fodbyfmZGOQ" frameborder="0" allowfullscreen></iframe>
 </div>
 <div class="description">
-<p><strong>Guardian</strong></p>
+<p><strong>Dunlore</strong></p>
 <div class="info">
-<p>Genre: Side-scrolling Platformer, linear story</p>
+<p>Genre: Massive Multiplayer Online , Open-ended story</p>
 <p>Platform: Windows XP, Vista, 7 and 8</p>
 <div class="paragraph">
-<p>You play the role of a teddy bear tasked with the duty to protect your child owner. When a mysterious force kidnaps the other toy guardians, it is up to you to rescue them and find the culprit.</p>
+<p>An open-world online multiplayer game in which players can fight enemies, gather resources, and battle each other. Currently under redevelopment.</p>
 </div>
 </div>
 </div> 
@@ -72,14 +55,11 @@
 
 <div class="gallery">
 <h3>Gallery</h3>
-<div class="gallery-module">
-<img src="../images/guardian-gallery.jpg" alt="Image Gallery: Guardian">
+<div class="gallery-module-half">
+<iframe width="375" height="225" src="https://www.youtube.com/embed/2pW-92GwVkg" frameborder="0" allowfullscreen></iframe>
 </div>
-<div class="gallery-module">
-<img src="../images/gallery-guardian-house.jpg" alt="Image Gallery: Guardian House">
-</div>
-<div class="gallery-module">
-<img src="../images/gallery-guardian-mountains.jpg" alt="Image Gallery: Guardian Mountains">
+<div class="gallery-module-half">
+<iframe width="375" height="225" src="https://www.youtube.com/embed/ukBHp2Bk16g" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 <footer>
@@ -88,6 +68,7 @@
 <a href="https://www.youtube.com/user/DrunkenWaffle"><img src="../images/youtube.png" alt="Ebrius Youtube Page Link" width="80px"></a>
 </div>
 </footer>
+</div>
 </body>
 
 </html>
