--- a/games/guardian.html
+++ b/games/guardian.html
@@ -31,29 +31,9 @@
   </div>
 </div>
   </li>
-  <li><a href="index.html">About</a></li>
-  <li><a href="index.html">Contact</a></li>
+  <li><a href="../about/index.html">About</a></li>
+  <li><a href="../contact/index.html">Contact</a></li>
 </ul>
-
-<!--<div class="mobile-menu">
-  <div class="mobile-dropdown">
-  <div class="mobile-drop-menu">Menu</div>
-  <div class="mobile-dropdown-content">
-  <a href="../index.html">Home</a>
-  <div class="dropdown">
-  <div class="drop-menu">Games</div>
-  <div class="dropdown-content">
-    <a href="guardian.html">Guardian</a>
-    <a href="#">Altered</a>
-    <a href="#">Dunlore</a>
-    <a href="#">Charm</a>
-    <a href="#">Chasm Climb</a>
-  </div>
-</div>
-  <a href="index.html">About</a>
-  <a href="index.html">Contact</a>
-</ul>
-</div>-->
 </nav>
 
 </header>
@@ -66,12 +46,14 @@
 <div class="description">
 <p><strong>Guardian</strong></p>
 <div class="info">
-<p>Genre: Side-scrolling Platformer, linear story</p>
-<p>Platform: Windows XP, Vista, 7 and 8</p>
-<p>Year: 2014</p>
+<ol>
+<li><span class="right"><strong>Genre:</strong></span><span class="left"> Side-scrolling Platformer, linear story</span></li>
+<li><span class="right"><strong>Platform:</strong></span><span class="left"> Windows XP, Vista, 7 and 8</span></li>
+<li><span class="right"><strong>Year:</strong></span><span class="left"> 2014</span></li>
+</ol>
 <p>
 <div class="paragraph">
-<p>You play the role of a teddy bear tasked with the duty to protect your child owner. When a mysterious force kidnaps the other toy guardians, it is up to you to rescue them and find the culprit.</p>
+<p>You play the role of a teddy bear tasked with the duty to protect your child owner. When a mysterious force kidnaps the other toy guardians, it is up to you to rescue them and find the culprit. Make your way through exotic worlds and nightmare-like landscapes to save your comrades!</p>
 </div>
 </div>
 </div> 
